# boringlog

./: .gitignore  LICENSE  README.md  publish.yml  pyproject.toml  test_logger.py
src/boringlog/: __init__.py  logger.py
tests/: conftest.py
