[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boringlog"
version = "0.1.0"
description = "Structured logging for microservices — built on Python's standard library, not around it."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Aleksandr Kizeev", email = "kizalvic@gmail.com" }]
keywords = [
    "logging",
    "structured-logging",
    "json-logging",
    "microservices",
    "stdlib",
    "context",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Logging",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/kizeev/boringlog"
Repository = "https://github.com/kizeev/boringlog"
Issues = "https://github.com/kizeev/boringlog/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/boringlog"]

[tool.pytest.ini_options]
testpaths = ["tests"]
